--- a/Backend2/package.json
+++ b/Backend2/package.json
@@ -4,12 +4,15 @@
   "description": "nodejs backend",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "crypto": "^1.0.1",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   }
 }
